<resources>
    <string name="app_name">E-Shop</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <!--  <string name="title_activity_dashboasd">MainActivity</string> -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_cart">MY CART</string>

    <string name="no_cart_item_found">No item found in cart!</string>

    <string name="lbl_subtotal">Subtotal</string>

    <string name="lbl_shipping_charge">Shipping Charge</string>

    <string name="lbl_total_amount">Total Amount</string>

    <string name="btn_lbl_checkout">Checkout</string>

    <string name="action_cart">My Cart</string>
</resources>