<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".ui.activity.CartListActivity"
    android:background="@color/colorOffWhite"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:background="@drawable/app_gradient_color_background"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/toolbar_cart_list_activity">

    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/title_my_cart"
        android:paddingEnd="0dp"
        android:paddingStart="-25dp"
        android:gravity="center"/>

</androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/rv_cart_items_list"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cart_list_activity"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        android:visibility="gone"
        android:layout_marginTop="@dimen/rv_cart_items_marginTop"/>

    <TextView
        android:id="@+id/tv_no_cart_item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bungee"
        android:text="@string/no_cart_item_found"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cart_list_activity" />


    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ll_checkout"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/ll_checkout_padding"
        android:orientation="vertical">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorDarkGrey"
        android:text="@string/lbl_subtotal"
        android:layout_weight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_sub_total"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorSecondaryText"
        tools:text="$100"
        android:textAlignment="center"/>

</LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorDarkGrey"
        android:text="@string/lbl_shipping_charge"
        android:layout_weight="1"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_shipping_charge"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorSecondaryText"
        tools:text="$10"
        android:textAlignment="center"/>

</LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorDarkGrey"
        android:text="@string/lbl_total_amount"
        android:layout_weight="1"/>

    <TextView
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tv_total_amount"
        android:textSize="@dimen/checkout_label_value_textSize"
        android:textColor="@color/colorDarkGrey"
        tools:text="$110"
        android:textAlignment="center"/>

</LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/btn_lbl_checkout"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>